2008-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2run.cc (jtag2::jtagSingleStep): When being interrupted by
	GDB while waiting for the EVT_BREAK from a CMND_SINGLE_STEP, we must
	issue a CMND_STOP_PROGRAM before proceeding.

2008-09-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: More ATxmega support.  As the Xmega requires a
	different initialization, this must be made known to AVaRICE
	beforehand.  The option -x (--xmega) can be used to tell AVaRICE
	that the target is an Xmega.  Alternatively, specifying an
	ATxmega device explicitly through -P will also work.
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/main.cc: (Ditto.)
	* src/devdescr.cc: (Ditto.) Additionally, provide a separate
	entry for the ATxmega128A1 rev D as this device uses a different
	JTAG ID.
	* doc/avarice.1: Document the -x/--xmega option.

2008-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to post-2.8.

2008-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to 2.8.

2008-08-26  Nils Kristian Strom  <nilsst@invalid.ed.ntnu.no>

	* src/main.cc (usage): Add -R/--reset-srst to usage.

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagprog.cc: Fix "deprecated conversion from string
	constant to char *" warnings.
	* src/main.cc: (Ditto.)

2008-06-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2008-06-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement external reset through nSRST signal.
	Based on the idea from patch #1398862 but implemented
	in a completely different way.
	* src/jtag.h: Add apply_nSRST to struct jtag, and parameter
	possible_nSRST to resetProgram().
	* src/jtag1.h: Add nrst to constructor.
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: Try applying nSRST before enabling JTAG
	emulation.
	* src/jtag2run.cc: possible_nSRST is ignored in mkII
	resetProgram().
	* src/jtagio.cc: Add possible_nSRST parameters.
	* src/remote.cc: (Ditto.)