@@ -4476,6 +4476,71 @@ jtag_device_def_type deviceDefinitions[] = {
 	    fill_b2(0),	// EECRAddress
 	},
     },
+    // DEV_ATMEGA128RFA1
+    {
+	"atmega128rfa1",
+	0xA701,
+	256, 512,	// 131072 bytes flash
+	8, 512,	// 4096 bytes EEPROM
+	71 * 4,	// 71 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFF,0xFF,0xFF,0xF9,0xFF,0x3D,0xB9,0xF8 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xFF,0xFF,0x1F,0xE0,0xFF,0x1D,0xA9,0xF8 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x73,0xFF,0x3F,0xFF,0xF7,0x3F,0xF7,0x3F,
+	      0xF7,0x3F,0x5F,0x3F,0x37,0x37,0x36,0xF0,
+	      0xFF,0xFF,0xFF,0x01,0xFF,0x0F,0x00,0x00,
+	      0xF7,0x3F,0x36,0x00,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x73,0xFF,0x3F,0xF8,0xF7,0x3F,0xF7,0x3F,
+	      0xF7,0x3F,0x5F,0x2F,0x36,0x36,0x36,0xF0,
+	      0xFF,0xFF,0xFF,0x01,0xFF,0x0F,0x00,0x00,
+	      0xF7,0x3F,0x36,0x00,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	      0xFF,0xFF,0xFF,0xFF }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x31,	// ucIDRAddress
+	    0x57,	// ucSPMCRAddress
+	    0x3B,	// ucRAMPZAddress
+	    fill_b2(256),	// uiFlashPageSize
+	    8,	// ucEepromPageSize
+	    fill_b4(0xFE00),	// ulBootAddress
+	    fill_b2(0x01FF),	// uiUpperExtIOLoc
+	    fill_b4(131072),	// ulFlashSize
+	    { 0x00 },	// ucEepromInst
+	    { 0x00 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(131072 / 256),	// uiFlashpages
+	    0x00,	// ucDWDRAddress
+	    0x00,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x200),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0,	// ucPCMaskHigh
+	    0x3C,	// ucEindAddress
+	    fill_b2(0x1F),	// EECRAddress
+	},
+    },
     // Termination record.
     { 
         NULL,                   // name
