@@ -6,6 +6,8 @@ Summary of changes since AVaRICE 2.8
 New CPU support added:
 ----------------------
 
+. ATmega128RFA1
+
 New features added:
 -------------------
 
